@@ -1,5 +1,12 @@
 2010-04-29  Sergio Martin  <sergio.martin@artica.es>
 
+	* godmode/servers/manage_recontask.php: Fixed the creation
+	of recon task without name and network. Also, the network 
+	is checked by the following regular expression 
+	"/[0-9]+.+[0-9]+.+[0-9]+.+[0-9]+\/+[0-9]/"
+
+2010-04-29  Sergio Martin  <sergio.martin@artica.es>
+
 	* godmode/reporting/visual_console_builder.php: Fixed that
 	was allowed to create a visual map without name and without
 	background. Bug: 2993503
